Fix horizontal scroll issue on mobile

--- a/bridgetown-website/frontend/styles/global.css
+++ b/bridgetown-website/frontend/styles/global.css
@@ -155,6 +155,11 @@ h2 {
   &.serif {
     font-size: calc(var(--h2-font-size) + 0.2em);
   }
+
+  @media (--sl-breakpoint-xs) {
+    position: relative;
+    overflow-x: hidden;
+  }
 }
 
 h1, h2 {
